# desafio-meta-backend

./: .gitignore  Dockerfile  README.md  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 07b0a505dcef_changing_pk_s.py  42a02c91d760_migration1.py  47ba2eb840b3_migration2.py  4e651768d405_setting_tag_name_to_be_unique.py  5333f840f7b7_first_migration.py  85cfd11fb9b8_adding_default_field.py  884aeeca1e53_changing_models.py  9c12c44be733_renaming_tables.py  bcb912a45f8f_adding_card_has_tag_relationship.py  df8d660ee5b9_changing_card_fields_to_allow_null_.py
src/: cards_from_csv.py  import_cards.py  main.py
src/cli/: cards_from_csv.py
src/db/: conn.py  crud.py  models.py  tables.py
src/models/: card.py  card_has_tag.py  tag.py
src/routers/: card.py  tag.py
src/schemas/: card.py  card_has_tag.py  tag.py
tests/: card_test.py  tag_test.py  test_desafio_vaga_meta.py
